# SerpentGuard

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  serpentguard_implementation_spec.md
.github/workflows/: ci.yml
docs/: architecture.md  demo_script.md  example_sources.md  external_references.md  geometry_sampling.md  localization.md  privacy.md  release_readiness.md  specification.md  supported_checks.md  supported_syntax.md
examples/: README.md  contradictory_cell.inp  duplicate_surface.inp  undefined_surface.inp  unknown_card.inp  valid_minimal.inp
examples/demo/: 01_valid_minimal.inp  02_undefined_surface.inp  03_contradictory_region.inp  04_pwr_pin_cell.inp  05_overlap_and_gap.inp  06_detector_issues.inp  07_ai_review.inp  README.md
src/serpentguard/: __init__.py  ai_payload.py  ai_review.py  analysis.py  cli.py  geometry.py  geometry_plot.py  i18n.py  models.py  parser.py  pbed.py  pbed_plot.py  preprocessor.py  references.py  ui.py
tests/: test_ai_payload.py  test_ai_review.py  test_analysis.py  test_demo_fixtures.py  test_geometry.py  test_i18n.py  test_parser.py  test_pbed.py  test_preprocessor.py  test_references.py  test_smoke.py  test_ui.py
tests/fixtures/detectors/: README.md  invalid_detector.inp  valid_detector.inp
tests/fixtures/geometry/: pwr_pin_cell.inp
tests/fixtures/pbed/: README.md
tests/fixtures/pbed/absolute/: main.inp
tests/fixtures/pbed/malformed/: main.inp
tests/fixtures/pbed/missing/: main.inp
tests/fixtures/pbed/traversal/: main.inp
tests/fixtures/pbed/valid/: main.inp
(+1 files in other folders)
