[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "serpentguard"
version = "0.1.0"
description = "Local deterministic preflight checks for a limited subset of Serpent input syntax"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pydantic>=2.8,<3",
    "streamlit>=1.40,<2",
]

[project.optional-dependencies]
ai = [
    "openai>=2.45,<3",
]
dev = [
    "build>=1.2,<2",
    "pre-commit>=4,<5",
    "pytest>=8,<10",
    "ruff>=0.9,<1",
]

[project.scripts]
serpentguard = "serpentguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/serpentguard"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
